scrollbar fixed

--- a/src/app/components/header/styles.component.css
+++ b/src/app/components/header/styles.component.css
@@ -3,7 +3,8 @@
     flex-direction: row;
     justify-content: space-between;
     padding: 10px;
-    border-bottom: solid 1px #333 
+    border-bottom: solid 1px #333;
+    height: 80px;
 }
 
 .header-button-box{
